fixed styled spacing to make sure enough space for everything on header

--- a/public/styles.css
+++ b/public/styles.css
@@ -283,7 +283,7 @@ body {
     font-size: 64px;
     font-weight: 800;
     line-height: 1.1;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
 
 .text-highlight {
